--- a/apollo-11/style.css
+++ b/apollo-11/style.css
@@ -21,7 +21,7 @@
         }
 
         .form-container {
-        max-width: 700px; /* Largura máxima do formulário */
+        max-width: 700px;
         background-color: rgba(0, 0, 0, 0.503);
         padding: 32px;
         border-radius: 4px;
@@ -84,7 +84,6 @@
             color: white;
             margin-top: 8px;
         }
-        /* Container para a página de resultados */
         .results-container {
             text-align: center;
             padding: 2px;
@@ -97,31 +96,57 @@
         }
 
         .results-container h4 {
-            font-size: 12em;
-            color: #0189b7; /* Um destaque para o nome */
+            font-size: 1.1em;
+            color: #51ff9d;
             margin-bottom: 20px;
         }
 
-        /* Estilo para a lista do histórico (log da missão) */
         .mission-log {
-            list-style-type: none; /* Remove as bolinhas da lista */
+            list-style-type: none;
             font-size: 0.9em;
             padding: 0;
             margin-top: 20px;
-            text-align: left; /* Alinha o texto da lista à esquerda para melhor leitura */
+            text-align: left; 
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
         }
 
         .mission-log li {
-            background-color: rgba(255, 255, 255, 0.05); /* Fundo semi-transparente */
+            background-color: rgba(255, 255, 255, 0.05); 
             padding: 10px;
             border-radius: 4px;
             margin-bottom: 5px;
             font-size: 0.8em;
         }
 
-        /* Estilo para o link parecer um botão, igual ao da página inicial */
+        .button-link {
+            display: inline-block;
+            margin-bottom: 40px;
+
+            font-family: 'Creato';
+            text-decoration: none;
+            background-color: #000000;
+            color: #ffffff;
+            padding: 16px;
+            border: 2px solid #ffffff;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1em;
+            font-weight: bold;
+        }
+
+        .button-link:hover {
+            font-family: 'Creato';
+            text-decoration: none;
+            background-color: #000000;
+            color: #ffffff;
+            padding: 12px 25px;
+            border: 4px solid #ffffff;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1em;
+            font-weight: bold;
+        }
 
 
